--- a/client/README
+++ b/client/README
@@ -1,1 +1,2 @@
-Fichier : ImagePopUp.qml  --> La fonction pour afficher l' image effetDecarte
+Fichier : ImagePopUp.qml  --> La fonction pour afficher l' image effetDecarte et les regles du jeu 
+                              
